--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=promotions
-spring.data.mongodb.username=productListUser
-spring.data.mongodb.password=productListPassword
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${localhost}:3306/db
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
